ai-ktransformers/kustomization/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-ktransformers
  namespace: ai-ktransformers
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.name: "__traefik_sticky"
    traefik.ingress.kubernetes.io/service.sticky.cookie.secure: "true"
spec:
  selector:
    app: ai-ktransformers
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
